Fixed layout issues in About, Contribute pages

--- a/assets/ie-styles-8-plus.scss
+++ b/assets/ie-styles-8-plus.scss
@@ -110,3 +110,8 @@ height: 0;
 .limitations-div{
   margin-left: 16.66%;
 }
+
+/* Content Pages */
+.page-content h2 {
+  margin-top: 30px;
+}
